--- a/C#/APIC#/API/API/appsettings.json
+++ b/C#/APIC#/API/API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDB":{
+    "ConnectionString": "mongodb://192.168.14.228", 
+    "DatabaseName": "XakaDB"
+  }
 }
