--- a/Server/ParserAndMore/MyParser/MyParser.csproj
+++ b/Server/ParserAndMore/MyParser/MyParser.csproj
@@ -12,4 +12,9 @@
       <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\DAL\DAL.csproj" />
+      <ProjectReference Include="..\Domain\Domain.csproj" />
+    </ItemGroup>
+
 </Project>
