--- a/Server/ParserAndMore/MyParser/MyParser.csproj
+++ b/Server/ParserAndMore/MyParser/MyParser.csproj
@@ -10,7 +10,8 @@
     <ItemGroup>
       <PackageReference Include="HtmlAgilityPack" Version="1.11.54" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
-      <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
+      <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
     </ItemGroup>
 
     <ItemGroup>
